# vdtecs

./: CMakeLists.txt  README.md
include/vdtecs/: archetype.h  component.h  ecs.h  engine.h  entity.h  id.h  isystem.h  system.h  system_manager.h
samples/sandbox/: CMakeLists.txt  main.cpp  stress.cpp  stress.h  time.cpp  time.h  timer.cpp  timer.h
source/: archetype.cpp  component.cpp  engine.cpp  entity.cpp  entity_manager.cpp  id.cpp  isystem.cpp  isystem_manager.cpp  system.cpp  system_manager.cpp
src/vdtecs/: component.h  data_component.h  ecs.h  engine.h  entity.cpp  entity.h  entity_manager.cpp  id_manager.h  system.h  system_manager.h  type_id.h
